<resources>
    <string name="app_name">QR Scanner &amp; Generator</string>

    <string name="admob_banner_profile">ca-app-pub-8182151086528694/8720028045</string>
    <string name="admob_banner_business">ca-app-pub-8182151086528694/9075907807</string>
    <string name="admob_banner_email">ca-app-pub-8182151086528694/3910662297</string>
    <string name="admob_banner_message">ca-app-pub-8182151086528694/1284498959</string>
    <string name="admob_banner_text">ca-app-pub-8182151086528694/9466241305</string>
    <string name="admob_banner_contact">ca-app-pub-8182151086528694/2956673274</string>
    <string name="admob_banner_scanner">ca-app-pub-8182151086528694/7667704783</string>


    <string name="Profile">Profile</string>
    <string name="Business">Business</string>
    <string name="Email">Email</string>
    <string name="Website">Text / Website</string>
    <string name="Contact">Contact</string>
    <string name="Message">Message</string>

    <string name="data">Result QR Code</string>
    <string name="scanNew">Scan new</string>
    <string name="image">Scan Image</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>

    <string name="alert_btn">Please scan qr code or select image</string>
    <string name="text_message">Please click at Scan new \n or  click Scan image</string>

    <string name="profile">Profile</string>
    <string name="business">Business</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="message">Message</string>
    <string name="text">Text / Website</string>
    <string name="generate">Generate</string>

</resources>
